--- a/index.html
+++ b/index.html
@@ -1,10 +1,170 @@
-<!DOCTYPE html>
-<html>
-<title>HTML Tutorial</title>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+<!--CarrieTeoh(Homepage)-->
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <!-- bootstrapCSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <!-- tittle -->
+	<title>Carrie Teoh</title>
+    <!-- Carrie portfolio CSS -->
+    <link rel="stylesheet" type="text/css" href="http://carrie99teoh.github.io/css/Carrie-portfolio-homepage.css" />
+    <!-- Animate.CSS wowjs-->
+    <link rel="stylesheet" href="http://carrie99teoh.github.io/css/animate.css">
+    <!-- font -->
+    <link href="https://fonts.googleapis.com/css?family=Baloo|Open+Sans" rel="stylesheet">
+</head>
+
 <body>
-
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
-
+    <!-- whole waves navbar-->
+    <div class="whole-nav">
+        <nav id="MainNav" class="navbar navbar-expand-lg navbar-dark bg-blue " role="navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon">
+                </span>
+            </button>
+            <div class="navbar-collapse justify-content-md-center collapse show" id="navbarsExample08">
+                <ul class="navbar-nav">
+                    <li class="index-home all-index nav-item">
+                        <a class="nav-link nav-link-color" href="http://carrie99teoh.github.io/html/Carrie-portfolio-aboutme.html">
+                            aboutMe
+                        </a>
+                    </li>
+                    <li class="index-home all-index nav-item">
+                        <a class="nav-link nav-link-color" href="http://carrie99teoh.github.io/html/Carrie-portfolio-artwork.html">
+                            artwork
+                        </a>
+                    </a>
+                    </li>   
+                    <li class="carrie-teoh all-index nav-item active-page">
+                        <a class="nav-link nav-link-color" href="http://carrie99teoh.github.io/html/Carrie-portfolio-homepage.html">
+                            Carrie Teoh
+                        </a>
+                    </li>
+                    <li class="index-home all-index nav-item">
+                        <a class="nav-link nav-link-color" href="http://carrie99teoh.github.io/html/Carrie-portfolio-contact.html">
+                            contact
+                        </a>
+                    </li>
+                    <li class="index-home all-index nav-item">
+                        <a class="nav-link nav-link-color" href="http://carrie99teoh.github.io/html/Carrie-portfolio-resume.html">
+                            resume
+                        </a>
+                    </li>
+                    </ul>
+            </div>
+        </nav> 
+        <div class="wave">
+            <img src="http://carrie99teoh.github.io/image/waves.png">
+        </div>
+    </div>
+    <!-- parallax -->
+    <div id="container-parallax" class="container-parallax">
+        <div id="scene" class="scene">
+            <div class="img-wheel" data-depth="0.3"><img class="wow animated pulse" src="http://carrie99teoh.github.io/image/wheel-body.png"></div>
+            <div class="img-wheel-eye" data-depth="0.4"><img class="wow animated pulse" src="http://carrie99teoh.github.io/image/wheel-eye.png"></div>
+            <div class="img-grass" data-depth="0.00"><img class="wow animated pulse" src="http://carrie99teoh.github.io/image/grass.jpg"></div>
+            <div class="img-water1" data-depth="0.8"><img class="wow animated pulse" src="http://carrie99teoh.github.io/image/water1.png"></div>
+            <div class="img-water1" data-depth="0.6"><img class="wow animated pulse" src="http://carrie99teoh.github.io/image/water2.png"></div>
+            <div class="img-water1" data-depth="0.5"><img class="wow animated pulse" src="http://carrie99teoh.github.io/image/water3.png"></div>
+            <div class="img-girl" data-depth="0.1"><img class="wow animated pulse" src="http://carrie99teoh.github.io/image/girl.png"></div>
+            <div class="img-girl-cloth" data-depth="0.08"><img class="wow animated pulse" src="http://carrie99teoh.github.io/image/girl-cloth.png"></div>
+            <div class="img-girl-shadow" data-depth="0.1"><img class="wow animated pulse" src="http://carrie99teoh.github.io/image/girl-shadow.png"></div>
+            <div class="img-font" data-depth="0.2"><img class="wow animated pulse" src="http://carrie99teoh.github.io/image/font.png"></div>
+        </div>
+    </div>
+    <div class="container-fluid green">
+    <!-- green div -->
+    </div>
+    <div class="container-fluid cariusel-and-hiimcarrie">
+        <div class="row">
+            <div class="col-lg-7 col-md-12 col-sm-12 container vertical-align">
+                <!-- Carousel -->
+                <div class="slides-box wow animated bounceInLeft slow">
+                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="rounded" src="http://carrie99teoh.github.io/image/homepage-carousel-leaf.jpg" class="d-block" alt="Artwork1">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="rounded" src="http://carrie99teoh.github.io/image/homepage-carousel-character.jpg" class="d-block" alt="Artwork2">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="rounded" src="http://carrie99teoh.github.io/image/homepage-carousel-ai.jpg" class="d-block" alt="Artwork3">
+                        </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                        </a>
+                    </div>    
+                </div>    
+            </div>
+            <div class="col-lg-5 col-md-12 col-sm-12 container vertical-align">
+                <!-- bref introduction  -->
+                <div class="hi-im-carrie">
+                        <h1 class="wow animated bounceInRight slow">Hi' Im Carrie</h1>
+                        <p class="wow animated bounceInRight slow delay120">I love desserts, love art, shoot everything good in life, feel different things, and enjoy my life.</p>
+                        <a class="btn btn-primary button-blue wow animated bounceInRight delay150 slow" href="http://carrie99teoh.github.io/html/Carrie-portfolio-aboutme.html" role="button">aboutMe</a>
+                        <a class="btn btn-primary button-blue wow animated bounceInRight delay160 slow" href="http://carrie99teoh.github.io/html/Carrie-portfolio-artwork.html" role="button">View more artwork</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- footer -->
+    <footer>
+        <div class="footer-waves">
+        <img src="http://carrie99teoh.github.io/image/footer-waves.png"> 
+        </div>
+        <div class="footer">
+            <p class="follow">follow me on</p>
+            <a href="https://www.facebook.com/carrieteoh.jinyi" target="_blank">Facebook</a>
+            <a href="https://www.instagram.com/carrie_teoh.1206" target="_blank">Instagram</a>
+            <a href="https://www.pinterest.com/carrie99teoh" target="_blank">Pinterest</a>
+            <p class="copyright">© Copyright 2019 Carrie Teoh. All Rights Reserved.</p>
+        </div>
+    </footer>
+    <!-- wow js -->
+    <script src="http://carrie99teoh.github.io/wow-master/dist/wow.min.js"></script>
+    <script>
+        var wow = new WOW({
+            boxClass: 'wow',
+            animateClass: 'animated',
+            offset: 0,
+            mobile: false,
+            live: true
+        }); 
+        wow.init();
+    </script>
+     <!-- bootstrap javascript-->
+     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+    <!-- parallax Scripts -->
+	<script src="http://carrie99teoh.github.io/parallax-master/parallax.js"></script>
+	<script>
+	// parallax Pretty simple huh?
+	var scene = document.getElementById('scene');
+	var parallax = new Parallax(scene);
+    </script>
+    <!-- paroller right -->
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script src="http://carrie99teoh.github.io/paroller.js-master/dist/jquery.paroller.min.js"></script>
+    <script src="http://carrie99teoh.github.io/paroller.js-master/dist/jquery.paroller.js"></script>
+    <script>
+        $('.my-element').paroller();
+    </script>
 </body>
 </html>
