--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- tittle -->
 	<title>Carrie Teoh</title>
     <!-- Carrie portfolio CSS -->
-    <link rel="stylesheet" type="text/css" href="http://carrie99teoh.github.io/css/Carrie-portfolio-homepage.css" />
+    <link rel="stylesheet" type="text/css" href="https://carrie99teoh.github.io/css/Carrie-portfolio-homepage.css" />
     <!-- Animate.CSS wowjs-->
     <link rel="stylesheet" href="http://carrie99teoh.github.io/css/animate.css">
     <!-- font -->
