--- a/html/Carrie-portfolio-aboutme.html
+++ b/html/Carrie-portfolio-aboutme.html
@@ -11,9 +11,9 @@
     <!-- tittle -->
 	<title>Carrie:aboutMe</title>
     <!-- Carrie portfolio CSS -->
-    <link rel="stylesheet" type="text/css" href="../css/Carrie-portfolio-aboutme.css" />
+    <link rel="stylesheet" type="text/css" href="http://carrie99teoh.github.io/css/Carrie-portfolio-aboutme.css" />
     <!-- Animate.CSS wowjs -->
-    <link rel="stylesheet" href="../css/animate.css">
+    <link rel="stylesheet" href="http://carrie99teoh.github.io/css/animate.css">
     <!-- font -->
 	<link href="https://fonts.googleapis.com/css?family=Baloo|Open+Sans" rel="stylesheet">
 
@@ -30,28 +30,28 @@
             <div class="navbar-collapse justify-content-md-center collapse show" id="navbarsExample08">
                 <ul class="navbar-nav">
                     <li class="index-home all-index nav-item active-page">
-                        <a class="nav-link nav-link-color" href="../html/Carrie-portfolio-aboutme.html">
+                        <a class="nav-link nav-link-color" href="http://carrie99teoh.github.io/html/Carrie-portfolio-aboutme.html">
                             aboutMe
                         </a>
                     </li>
                     <li class="index-home all-index nav-item">
-                        <a class="nav-link nav-link-color" href="../html/Carrie-portfolio-artwork.html">
+                        <a class="nav-link nav-link-color" href="http://carrie99teoh.github.io/html/Carrie-portfolio-artwork.html">
                             artwork
                         </a>
                     </a>
                     </li>   
                     <li class="carrie-teoh all-index nav-item">
-                        <a class="nav-link nav-link-color" href="../html/Carrie-portfolio-homepage.html">
+                        <a class="nav-link nav-link-color" href="http://carrie99teoh.github.io/html/Carrie-portfolio-homepage.html">
                             Carrie Teoh
                         </a>
                     </li>
                     <li class="index-home all-index nav-item">
-                        <a class="nav-link nav-link-color" href="../html/Carrie-portfolio-contact.html">
+                        <a class="nav-link nav-link-color" href="http://carrie99teoh.github.io/html/Carrie-portfolio-contact.html">
                             contact
                         </a>
                     </li>
                     <li class="index-home all-index nav-item">
-                        <a class="nav-link nav-link-color" href="../html/Carrie-portfolio-resume.html">
+                        <a class="nav-link nav-link-color" href="http://carrie99teoh.github.io/html/Carrie-portfolio-resume.html">
                             resume
                         </a>
                     </li>
@@ -59,14 +59,14 @@
              </div>
          </nav> 
     <div class="wave">
-        <img src="../image/waves.png">
+        <img src="http://carrie99teoh.github.io/image/waves.png">
     </div>
     </div>
     <!-- content -->
     <div class="container container-margin-top">
         <div class="row row-center">
             <div class="col-lg-12 row-1">
-                <img class="wow animated flipInX" src="../image/about-me-profile-pic.png">
+                <img class="wow animated flipInX" src="http://carrie99teoh.github.io/image/about-me-profile-pic.png">
             </div>
         </div>
         <div class="row row-center">
@@ -104,16 +104,16 @@
     <div class="container life-image-container">
         <div class="row">
             <div class="col-lg-3 col-md-6 col-sm-12 life-image wow animated fadeInUpBig delay160">
-                <img class="rounded" src="../image/life-image-01.jpg">
+                <img class="rounded" src="http://carrie99teoh.github.io/image/life-image-01.jpg">
             </div>
             <div class="col-lg-3 col-md-6 col-sm-12 life-image wow animated fadeInUpBig delay160">
-                <img class="rounded" src="../image/life-image-02.jpg">
+                <img class="rounded" src="http://carrie99teoh.github.io/image/life-image-02.jpg">
             </div>
             <div class="col-lg-3 col-md-6 col-sm-12 life-image wow animated fadeInUpBig delay160">
-                <img class="rounded" src="../image/life-image-03.jpg">
+                <img class="rounded" src="http://carrie99teoh.github.io/image/life-image-03.jpg">
             </div>
             <div class="col-lg-3 col-md-6 col-sm-12 life-image wow animated fadeInUpBig delay160">
-                <img class="rounded" src="../image/life-image-04.jpg">
+                <img class="rounded" src="http://carrie99teoh.github.io/image/life-image-04.jpg">
             </div>
         </div>
     </div>
@@ -121,7 +121,7 @@
     <!-- footer -->
     <footer>
         <div class="footer-waves">
-          <img src="../image/footer-waves.png"> 
+          <img src="http://carrie99teoh.github.io/image/footer-waves.png"> 
         </div>
         <div class="footer">
             <p class="follow">follow me on</p>
@@ -136,7 +136,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
     <!-- wow js -->
-    <script src="../wow-master/dist/wow.min.js"></script>
+    <script src="http://carrie99teoh.github.io/wow-master/dist/wow.min.js"></script>
     <script>
         var wow = new WOW({
             boxClass: 'wow',
