--- a/html/Carrie-portfolio-aboutme.html
+++ b/html/Carrie-portfolio-aboutme.html
@@ -11,7 +11,7 @@
     <!-- tittle -->
 	<title>Carrie:aboutMe</title>
     <!-- Carrie portfolio CSS -->
-    <link rel="stylesheet" type="text/css" href="http://carrie99teoh.github.io/css/Carrie-portfolio-aboutme.css" />
+    <link rel="stylesheet" href="http://carrie99teoh.github.io/css/Carrie-portfolio-aboutme.css" />
     <!-- Animate.CSS wowjs -->
     <link rel="stylesheet" href="http://carrie99teoh.github.io/css/animate.css">
     <!-- font -->
