--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <!-- tittle -->
 	<title>Carrie Teoh</title>
     <!-- Carrie portfolio CSS -->
-    <link rel="stylesheet" href="https://carrie99teoh.github.io/css/Carrie-portfolio-homepage.css" />
+    <link rel="stylesheet" type="text/css" href="https://carrie99teoh.github.io/css/Carrie-portfolio-homepage.css" />
     <!-- Animate.CSS wowjs-->
-    <link rel="stylesheet" href="http://carrie99teoh.github.io/css/animate.css">
+    <link rel="stylesheet" href="https://carrie99teoh.github.io/css/animate.css">
     <!-- font -->
     <link href="https://fonts.googleapis.com/css?family=Baloo|Open+Sans" rel="stylesheet">
 </head>
@@ -29,28 +29,28 @@
             <div class="navbar-collapse justify-content-md-center collapse show" id="navbarsExample08">
                 <ul class="navbar-nav">
                     <li class="index-home all-index nav-item">
-                        <a class="nav-link nav-link-color" href="http://carrie99teoh.github.io/html/Carrie-portfolio-aboutme.html">
+                        <a class="nav-link nav-link-color" href="https://carrie99teoh.github.io/html/Carrie-portfolio-aboutme.html">
                             aboutMe
                         </a>
                     </li>
                     <li class="index-home all-index nav-item">
-                        <a class="nav-link nav-link-color" href="http://carrie99teoh.github.io/html/Carrie-portfolio-artwork.html">
+                        <a class="nav-link nav-link-color" href="https://carrie99teoh.github.io/html/Carrie-portfolio-artwork.html">
                             artwork
                         </a>
                     </a>
                     </li>   
                     <li class="carrie-teoh all-index nav-item active-page">
-                        <a class="nav-link nav-link-color" href="http://carrie99teoh.github.io/html/Carrie-portfolio-homepage.html">
+                        <a class="nav-link nav-link-color" href="https://carrie99teoh.github.io/html/Carrie-portfolio-homepage.html">
                             Carrie Teoh
                         </a>
                     </li>
                     <li class="index-home all-index nav-item">
-                        <a class="nav-link nav-link-color" href="http://carrie99teoh.github.io/html/Carrie-portfolio-contact.html">
+                        <a class="nav-link nav-link-color" href="https://carrie99teoh.github.io/html/Carrie-portfolio-contact.html">
                             contact
                         </a>
                     </li>
                     <li class="index-home all-index nav-item">
-                        <a class="nav-link nav-link-color" href="http://carrie99teoh.github.io/html/Carrie-portfolio-resume.html">
+                        <a class="nav-link nav-link-color" href="https://carrie99teoh.github.io/html/Carrie-portfolio-resume.html">
                             resume
                         </a>
                     </li>
@@ -58,22 +58,22 @@
             </div>
         </nav> 
         <div class="wave">
-            <img src="http://carrie99teoh.github.io/image/waves.png">
+            <img src="https://carrie99teoh.github.io/image/waves.png">
         </div>
     </div>
     <!-- parallax -->
     <div id="container-parallax" class="container-parallax">
         <div id="scene" class="scene">
-            <div class="img-wheel" data-depth="0.3"><img class="wow animated pulse" src="http://carrie99teoh.github.io/image/wheel-body.png"></div>
-            <div class="img-wheel-eye" data-depth="0.4"><img class="wow animated pulse" src="http://carrie99teoh.github.io/image/wheel-eye.png"></div>
-            <div class="img-grass" data-depth="0.00"><img class="wow animated pulse" src="http://carrie99teoh.github.io/image/grass.jpg"></div>
-            <div class="img-water1" data-depth="0.8"><img class="wow animated pulse" src="http://carrie99teoh.github.io/image/water1.png"></div>
-            <div class="img-water1" data-depth="0.6"><img class="wow animated pulse" src="http://carrie99teoh.github.io/image/water2.png"></div>
-            <div class="img-water1" data-depth="0.5"><img class="wow animated pulse" src="http://carrie99teoh.github.io/image/water3.png"></div>
-            <div class="img-girl" data-depth="0.1"><img class="wow animated pulse" src="http://carrie99teoh.github.io/image/girl.png"></div>
-            <div class="img-girl-cloth" data-depth="0.08"><img class="wow animated pulse" src="http://carrie99teoh.github.io/image/girl-cloth.png"></div>
-            <div class="img-girl-shadow" data-depth="0.1"><img class="wow animated pulse" src="http://carrie99teoh.github.io/image/girl-shadow.png"></div>
-            <div class="img-font" data-depth="0.2"><img class="wow animated pulse" src="http://carrie99teoh.github.io/image/font.png"></div>
+            <div class="img-wheel" data-depth="0.3"><img class="wow animated pulse" src="https://carrie99teoh.github.io/image/wheel-body.png"></div>
+            <div class="img-wheel-eye" data-depth="0.4"><img class="wow animated pulse" src="https://carrie99teoh.github.io/image/wheel-eye.png"></div>
+            <div class="img-grass" data-depth="0.00"><img class="wow animated pulse" src="https://carrie99teoh.github.io/image/grass.jpg"></div>
+            <div class="img-water1" data-depth="0.8"><img class="wow animated pulse" src="https://carrie99teoh.github.io/image/water1.png"></div>
+            <div class="img-water1" data-depth="0.6"><img class="wow animated pulse" src="https://carrie99teoh.github.io/image/water2.png"></div>
+            <div class="img-water1" data-depth="0.5"><img class="wow animated pulse" src="https://carrie99teoh.github.io/image/water3.png"></div>
+            <div class="img-girl" data-depth="0.1"><img class="wow animated pulse" src="https://carrie99teoh.github.io/image/girl.png"></div>
+            <div class="img-girl-cloth" data-depth="0.08"><img class="wow animated pulse" src="https://carrie99teoh.github.io/image/girl-cloth.png"></div>
+            <div class="img-girl-shadow" data-depth="0.1"><img class="wow animated pulse" src="https://carrie99teoh.github.io/image/girl-shadow.png"></div>
+            <div class="img-font" data-depth="0.2"><img class="wow animated pulse" src="https://carrie99teoh.github.io/image/font.png"></div>
         </div>
     </div>
     <div class="container-fluid green">
@@ -92,13 +92,13 @@
                         </ol>
                         <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="rounded" src="http://carrie99teoh.github.io/image/homepage-carousel-leaf.jpg" class="d-block" alt="Artwork1">
+                            <img class="rounded" src="https://carrie99teoh.github.io/image/homepage-carousel-leaf.jpg" class="d-block" alt="Artwork1">
                         </div>
                         <div class="carousel-item">
-                            <img class="rounded" src="http://carrie99teoh.github.io/image/homepage-carousel-character.jpg" class="d-block" alt="Artwork2">
+                            <img class="rounded" src="https://carrie99teoh.github.io/image/homepage-carousel-character.jpg" class="d-block" alt="Artwork2">
                         </div>
                         <div class="carousel-item">
-                            <img class="rounded" src="http://carrie99teoh.github.io/image/homepage-carousel-ai.jpg" class="d-block" alt="Artwork3">
+                            <img class="rounded" src="https://carrie99teoh.github.io/image/homepage-carousel-ai.jpg" class="d-block" alt="Artwork3">
                         </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -117,8 +117,8 @@
                 <div class="hi-im-carrie">
                         <h1 class="wow animated bounceInRight slow">Hi' Im Carrie</h1>
                         <p class="wow animated bounceInRight slow delay120">I love desserts, love art, shoot everything good in life, feel different things, and enjoy my life.</p>
-                        <a class="btn btn-primary button-blue wow animated bounceInRight delay150 slow" href="http://carrie99teoh.github.io/html/Carrie-portfolio-aboutme.html" role="button">aboutMe</a>
-                        <a class="btn btn-primary button-blue wow animated bounceInRight delay160 slow" href="http://carrie99teoh.github.io/html/Carrie-portfolio-artwork.html" role="button">View more artwork</a>
+                        <a class="btn btn-primary button-blue wow animated bounceInRight delay150 slow" href="https://carrie99teoh.github.io/html/Carrie-portfolio-aboutme.html" role="button">aboutMe</a>
+                        <a class="btn btn-primary button-blue wow animated bounceInRight delay160 slow" href="https://carrie99teoh.github.io/html/Carrie-portfolio-artwork.html" role="button">View more artwork</a>
                 </div>
             </div>
         </div>
@@ -126,7 +126,7 @@
     <!-- footer -->
     <footer>
         <div class="footer-waves">
-        <img src="http://carrie99teoh.github.io/image/footer-waves.png"> 
+        <img src="https://carrie99teoh.github.io/image/footer-waves.png"> 
         </div>
         <div class="footer">
             <p class="follow">follow me on</p>
@@ -137,7 +137,7 @@
         </div>
     </footer>
     <!-- wow js -->
-    <script src="http://carrie99teoh.github.io/wow-master/dist/wow.min.js"></script>
+    <script src="https://carrie99teoh.github.io/wow-master/dist/wow.min.js"></script>
     <script>
         var wow = new WOW({
             boxClass: 'wow',
@@ -153,7 +153,7 @@
      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
     <!-- parallax Scripts -->
-	<script src="http://carrie99teoh.github.io/parallax-master/parallax.js"></script>
+	<script src="https://carrie99teoh.github.io/parallax-master/parallax.js"></script>
 	<script>
 	// parallax Pretty simple huh?
 	var scene = document.getElementById('scene');
@@ -161,8 +161,8 @@
     </script>
     <!-- paroller right -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <script src="http://carrie99teoh.github.io/paroller.js-master/dist/jquery.paroller.min.js"></script>
-    <script src="http://carrie99teoh.github.io/paroller.js-master/dist/jquery.paroller.js"></script>
+    <script src="https://carrie99teoh.github.io/paroller.js-master/dist/jquery.paroller.min.js"></script>
+    <script src="https://carrie99teoh.github.io/paroller.js-master/dist/jquery.paroller.js"></script>
     <script>
         $('.my-element').paroller();
     </script>
