--- a/html/Carrie-portfolio-artwork.html
+++ b/html/Carrie-portfolio-artwork.html
@@ -11,9 +11,9 @@
     <!-- tittle -->
 	<title>Carrie:Artwork</title>
     <!-- Carrie portfolio CSS -->
-    <link rel="stylesheet" type="text/css" href="../css/Carrie-portfolio-artwork.css"/>
+    <link rel="stylesheet" href="https://carrie99teoh.github.io/css/Carrie-portfolio-artwork.css"/>
     <!-- Animate.CSS wowjs-->
-    <link rel="stylesheet" href="../css/animate.css">
+    <link rel="stylesheet" href="https://carrie99teoh.github.io/css/animate.css">
     <!-- font -->
     <link href="https://fonts.googleapis.com/css?family=Baloo|Open+Sans" rel="stylesheet">
 </head>
@@ -28,28 +28,28 @@
             <div class="navbar-collapse justify-content-md-center collapse show" id="navbarsExample08">
                 <ul class="navbar-nav">
                     <li class="index-home all-index nav-item">
-                        <a class="nav-link nav-link-color" href="../html/Carrie-portfolio-aboutme.html">
+                        <a class="nav-link nav-link-color" href="https://carrie99teoh.github.io/html/Carrie-portfolio-aboutme.html">
                             aboutMe
                         </a>
                     </li>
                     <li class="index-home all-index nav-item active-page">
-                        <a class="nav-link nav-link-color" href="../html/Carrie-portfolio-artwork.html">
+                        <a class="nav-link nav-link-color" href="https://carrie99teoh.github.io/html/Carrie-portfolio-artwork.html">
                             artwork
                         </a>
                     </a>
                     </li>   
                     <li class="carrie-teoh all-index nav-item">
-                        <a class="nav-link nav-link-color" href="../html/Carrie-portfolio-homepage.html">
+                        <a class="nav-link nav-link-color" href="https://carrie99teoh.github.io/html/Carrie-portfolio-homepage.html">
                             Carrie Teoh
                         </a>
                     </li>
                     <li class="index-home all-index nav-item">
-                        <a class="nav-link nav-link-color" href="../html/Carrie-portfolio-contact.html">
+                        <a class="nav-link nav-link-color" href="https://carrie99teoh.github.io/html/Carrie-portfolio-contact.html">
                             contact
                         </a>
                     </li>
                     <li class="index-home all-index nav-item">
-                        <a class="nav-link nav-link-color" href="../html/Carrie-portfolio-resume.html">
+                        <a class="nav-link nav-link-color" href="https://carrie99teoh.github.io/html/Carrie-portfolio-resume.html">
                             resume
                         </a>
                     </li>
@@ -57,7 +57,7 @@
              </div>
          </nav> 
     <div class="wave">
-        <img src="../image/waves.png">
+        <img src="https://carrie99teoh.github.io/image/waves.png">
     </div>
     </div>
     <!-- content -->
@@ -76,13 +76,13 @@
                 <h1>Corporate Identity</h1>
                 <div class="row">
                     <div class="col-lg-4 col-md-12 col-sm-12 img-space">
-                        <img class="rounded" src="../image/corporate-identity-1.jpg">
+                        <img class="rounded" src="https://carrie99teoh.github.io/image/corporate-identity-1.jpg">
                     </div>
                     <div class="col-lg-4 col-md-12 col-sm-12 img-space">
-                        <img class="rounded" src="../image/corporate-identity-2.jpg">
+                        <img class="rounded" src="https://carrie99teoh.github.io/image/corporate-identity-2.jpg">
                     </div>
                     <div class="col-lg-4 col-md-12 col-sm-12 img-space">
-                        <img class="rounded" src="../image/corporate-identity-3.jpg">
+                        <img class="rounded" src="https://carrie99teoh.github.io/image/corporate-identity-3.jpg">
                     </div>
                 </div>
             </div>
@@ -92,13 +92,13 @@
                 <h1>Advertising</h1>
                 <div class="row">
                     <div class="col-lg-4 col-md-12 col-sm-12 img-space">
-                        <img class="rounded" src="../image/advertising-1.jpg">
+                        <img class="rounded" src="https://carrie99teoh.github.io/image/advertising-1.jpg">
                     </div>
                     <div class="col-lg-4 col-md-12 col-sm-12 img-space">
-                        <img class="rounded" src="../image/advertising-3.jpg">
+                        <img class="rounded" src="https://carrie99teoh.github.io/image/advertising-3.jpg">
                     </div>
                     <div class="col-lg-4 col-md-12 col-sm-12 img-space">
-                        <img class="rounded" src="../image/advertising-2.jpg">
+                        <img class="rounded" src="https://carrie99teoh.github.io/image/advertising-2.jpg">
                     </div>
                 </div>
             </div>
@@ -106,13 +106,13 @@
                 <h1>Drawing</h1>
                 <div class="row">
                     <div class="col-lg-4 col-md-12 col-sm-12 img-space">
-                        <img class="rounded" src="../image/drawing-1.jpg">
+                        <img class="rounded" src="https://carrie99teoh.github.io/image/drawing-1.jpg">
                     </div>
                     <div class="col-lg-4 col-md-12 col-sm-12 img-space">
-                        <img class="rounded" src="../image/drawing-2.jpg">
+                        <img class="rounded" src="https://carrie99teoh.github.io/image/drawing-2.jpg">
                     </div>
                     <div class="col-lg-4 col-md-12 col-sm-12 img-space">
-                        <img class="rounded" src="../image/drawing-3.jpg">
+                        <img class="rounded" src="https://carrie99teoh.github.io/image/drawing-3.jpg">
                     </div>
                 </div>
             </div>
@@ -120,13 +120,13 @@
                 <h1>Illustration</h1>
                 <div class="row">
                     <div class="col-lg-4 col-md-12 col-sm-12 img-space">
-                        <img class="rounded" src="../image/illustration-1.jpg">
+                        <img class="rounded" src="https://carrie99teoh.github.io/image/illustration-1.jpg">
                     </div>
                     <div class="col-lg-4 col-md-12 col-sm-12 img-space">
-                        <img class="rounded" src="../image/illustration-2.jpg">
+                        <img class="rounded" src="https://carrie99teoh.github.io/image/illustration-2.jpg">
                     </div>
                     <div class="col-lg-4 col-md-12 col-sm-12 img-space">
-                        <img class="rounded" src="../image/illustration-3.jpg">
+                        <img class="rounded" src="https://carrie99teoh.github.io/image/illustration-3.jpg">
                     </div>
                 </div>
             </div>
@@ -134,13 +134,13 @@
                 <h1>Photography</h1>
                 <div class="row">
                     <div class="col-lg-4 col-md-12 col-sm-12 img-space">
-                        <img class="rounded" src="../image/photography-1.jpg">
+                        <img class="rounded" src="https://carrie99teoh.github.io/image/photography-1.jpg">
                     </div>
                     <div class="col-lg-4 col-md-12 col-sm-12 img-space">
-                        <img class="rounded" src="../image/photography-2.jpg">
+                        <img class="rounded" src="https://carrie99teoh.github.io/image/photography-2.jpg">
                     </div>
                     <div class="col-lg-4 col-md-12 col-sm-12 img-space">
-                        <img class="rounded" src="../image/photography-3.jpg">
+                        <img class="rounded" src="https://carrie99teoh.github.io/image/photography-3.jpg">
                     </div>
                 </div>
             </div>
@@ -148,13 +148,13 @@
                 <h1>Packaging</h1>
                 <div class="row">
                     <div class="col-lg-4 col-md-12 col-sm-12 img-space">
-                        <img class="rounded" src="../image/packaging-1.jpg">
+                        <img class="rounded" src="https://carrie99teoh.github.io/image/packaging-1.jpg">
                     </div>
                     <div class="col-lg-4 col-md-12 col-sm-12 img-space">
-                        <img class="rounded" src="../image/packaging-3.jpg">
+                        <img class="rounded" src="https://carrie99teoh.github.io/image/packaging-3.jpg">
                     </div>
                     <div class="col-lg-4 col-md-12 col-sm-12 img-space">
-                        <img class="rounded" src="../image/packaging-2.jpg">
+                        <img class="rounded" src="https://carrie99teoh.github.io/image/packaging-2.jpg">
                     </div>
                 </div>
             </div>
@@ -163,19 +163,19 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-12 col-sm-12 img-space">
                         <video class="rounded" controls muted>
-                            <source src="../video/flipbook.mp4" type="video/mp4">
+                            <source src="https://carrie99teoh.github.io/video/flipbook.mp4" type="video/mp4">
                                 Your browser does not support the video 
                         </video> 
                     </div>
                     <div class="col-lg-4 col-md-12 col-sm-12 img-space">
                         <video class="rounded" controls muted>
-                            <source src="../video/waving.mp4" type="video/mp4">
+                            <source src="https://carrie99teoh.github.io/video/waving.mp4" type="video/mp4">
                                 Your browser does not support the video 
                         </video> 
                     </div>                    
                     <div class="col-lg-4 col-md-12 col-sm-12 img-space">
                         <video class="rounded" controls muted>
-                            <source src="../video/jump.mp4" type="video/mp4">
+                            <source src="https://carrie99teoh.github.io/video/jump.mp4" type="video/mp4">
                                 Your browser does not support the video 
                         </video> 
                     </div>
@@ -191,7 +191,7 @@
     <!-- footer -->
     <footer>
         <div class="footer-waves">
-          <img src="../image/footer-waves.png"> 
+          <img src="https://carrie99teoh.github.io/image/footer-waves.png"> 
         </div>
         <div class="footer">
             <p class="follow">follow me on</p>
@@ -227,7 +227,7 @@
         }
     </script>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <script src="../paroller.js-master/dist/jquery.paroller.min.js"></script>
+    <script src="https://carrie99teoh.github.io/paroller.js-master/dist/jquery.paroller.min.js"></script>
     <script>
         $(function(){
             $('a.corporate-identity').click(function(){
@@ -273,7 +273,7 @@
         })
         </script>
         <!-- wow js -->
-        <script src="../wow-master/dist/wow.min.js"></script>
+        <script src="https://carrie99teoh.github.io/wow-master/dist/wow.min.js"></script>
         <script>
         var wow = new WOW({
             boxClass: 'wow',
