--- a/html/Carrie-portfolio-artwork.html
+++ b/html/Carrie-portfolio-artwork.html
@@ -92,7 +92,7 @@
                 <h1>Advertising</h1>
                 <div class="row">
                     <div class="col-lg-4 col-md-12 col-sm-12 img-space">
-                        <img class="rounded" src="https://carrie99teoh.github.io/image/1.jpg">
+                        <img class="rounded" src="https://carrie99teoh.github.io/image/advertising-1.jpg">
                     </div>
                     <div class="col-lg-4 col-md-12 col-sm-12 img-space">
                         <img class="rounded" src="https://carrie99teoh.github.io/image/advertising-3.jpg">
