--- a/html/Carrie-portfolio-artwork.html
+++ b/html/Carrie-portfolio-artwork.html
@@ -11,7 +11,7 @@
     <!-- tittle -->
 	<title>Carrie:Artwork</title>
     <!-- Carrie portfolio CSS -->
-    <link rel="stylesheet" href="https://carrie99teoh.github.io/css/Carrie-portfolio-artwork.css"/>
+    <link rel="stylesheet" type="text/css" href="https://carrie99teoh.github.io/css/Carrie-portfolio-artwork.css"/>
     <!-- Animate.CSS wowjs-->
     <link rel="stylesheet" href="https://carrie99teoh.github.io/css/animate.css">
     <!-- font -->
@@ -86,7 +86,7 @@
                     </div>
                 </div>
             </div>
-            <div id="Advertising" class="subjek wow animated fadeIn delay120 {
+            <div id="Ad" class="subjek wow animated fadeIn delay120 {
                 animation-delay: 120ms;
               }">
                 <h1>Advertising</h1>
