--- a/html/Carrie-portfolio-contact.html
+++ b/html/Carrie-portfolio-contact.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
-<!--CarrieTeoh(aboutme)-->
+<!--CarrieTeoh(contact)-->
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -11,9 +11,9 @@
     <!-- tittle -->
 	<title>Carrie:Contact</title>
     <!-- Carrie portfolio CSS -->
-    <link rel="stylesheet" type="text/css" href="../css/Carrie-portfolio-contact.css"/>
+    <link rel="stylesheet" href="https://carrie99teoh.github.io/css/Carrie-portfolio-contact.css"/>
     <!-- Animate.CSS wowjs-->
-    <link rel="stylesheet" href="../css/animate.css">
+    <link rel="stylesheet" href="https://carrie99teoh.github.io/css/animate.css">
     <!-- font -->
     <link href="https://fonts.googleapis.com/css?family=Baloo|Open+Sans" rel="stylesheet">
 </head>
@@ -28,28 +28,28 @@
             <div class="navbar-collapse justify-content-md-center collapse show" id="navbarsExample08">
                 <ul class="navbar-nav">
                     <li class="index-home all-index nav-item">
-                        <a class="nav-link nav-link-color" href="../html/Carrie-portfolio-aboutme.html">
+                        <a class="nav-link nav-link-color" href="https://carrie99teoh.github.io/html/Carrie-portfolio-aboutme.html">
                             aboutMe
                         </a>
                     </li>
                     <li class="index-home all-index nav-item">
-                        <a class="nav-link nav-link-color" href="../html/Carrie-portfolio-artwork.html">
+                        <a class="nav-link nav-link-color" href="https://carrie99teoh.github.io/html/Carrie-portfolio-artwork.html">
                             artwork
                         </a>
                     </a>
                     </li>   
                     <li class="carrie-teoh all-index nav-item">
-                        <a class="nav-link nav-link-color" href="../html/Carrie-portfolio-homepage.html">
+                        <a class="nav-link nav-link-color" href="https://carrie99teoh.github.io/html/Carrie-portfolio-homepage.html">
                             Carrie Teoh
                         </a>
                     </li>
                     <li class="index-home all-index nav-item active-page">
-                        <a class="nav-link nav-link-color" href="../html/Carrie-portfolio-contact.html">
+                        <a class="nav-link nav-link-color" href="https://carrie99teoh.github.io/html/Carrie-portfolio-contact.html">
                             contact
                         </a>
                     </li>
                     <li class="index-home all-index nav-item">
-                        <a class="nav-link nav-link-color" href="../html/Carrie-portfolio-resume.html">
+                        <a class="nav-link nav-link-color" href="https://carrie99teoh.github.io/html/Carrie-portfolio-resume.html">
                             resume
                         </a>
                     </li>
@@ -57,7 +57,7 @@
              </div>
          </nav> 
     <div class="wave">
-        <img src="../image/waves.png">
+        <img src="https://carrie99teoh.github.io/image/waves.png">
     </div>
     </div>
     <!-- content -->
@@ -82,7 +82,7 @@
     <!-- footer -->
     <footer>
         <div class="footer-waves">
-          <img src="../image/footer-waves.png"> 
+          <img src="https://carrie99teoh.github.io/image/footer-waves.png"> 
         </div>
         <div class="footer">
             <p class="follow">follow me on</p>
@@ -97,7 +97,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
     <!-- wow js -->
-    <script src="../wow-master/dist/wow.min.js"></script>
+    <script src="https://carrie99teoh.github.io/wow-master/dist/wow.min.js"></script>
     <script>
         var wow = new WOW({
             boxClass: 'wow',
