--- a/html/Carrie-portfolio-resume.html
+++ b/html/Carrie-portfolio-resume.html
@@ -67,8 +67,8 @@
     </div>
     <div class="up">
         <!-- content -->
-        <div class="container-fluid justify-content-md-center row-1">
-            <div class="col-12 project wow animated flipInX rounded">
+        <div class="container justify-content-md-center row-1">
+            <div class="project wow animated flipInX rounded">
                 <div class="project-hover">
                     <h2>Carrie's resume</h2>
                     
