--- a/html/Carrie-portfolio-resume.html
+++ b/html/Carrie-portfolio-resume.html
@@ -67,7 +67,8 @@
     </div>
     <div class="up">
         <!-- content -->
-        <div class="container justify-content-md-center row-1">
+        <div class="container justify-content-md-center">
+		<div class="row row-1">
             <div class="project wow animated flipInX rounded">
                 <div class="project-hover">
                     <h2>Carrie's resume</h2>
@@ -78,6 +79,7 @@
                     <a href="https://carrie99teoh.github.io/image/resume.docx">download</a>
                 </div>
             </div>
+		</div>
             <div class="clearfix"></div>
         </div>
         <!-- parallax -->
