--- a/html/Carrie-portfolio-resume.html
+++ b/html/Carrie-portfolio-resume.html
@@ -67,8 +67,7 @@
     </div>
     <div class="up">
         <!-- content -->
-        <div class="container justify-content-md-center">
-		<div class="row row-1">
+        <div class="container row-1">
             <div class="project wow animated flipInX rounded">
                 <div class="project-hover">
                     <h2>Carrie's resume</h2>
@@ -76,10 +75,9 @@
                     <hr />
                     <p>I appreciate your time and consideration and hope that my skills and experience align with your needs.</p>
                     <a href="https://drive.google.com/file/d/1Z_HHkwKnlPLoaD6kWYnJW7fS9bQhUayX/view?usp=sharing">View</a>
-                    <a href="https://carrie99teoh.github.io/image/resume.docx">download</a>
+                    <a href="../image/resume.docx">download</a>
                 </div>
             </div>
-		</div>
             <div class="clearfix"></div>
         </div>
         <!-- parallax -->
