--- a/html/Carrie-portfolio-resume.html
+++ b/html/Carrie-portfolio-resume.html
@@ -67,7 +67,9 @@
     </div>
     <div class="up">
         <!-- content -->
-        <div class="container row-1">
+        <div class="container">
+		<div class="row row-1">
+			<div class="col-md-12"
             <div class="project wow animated flipInX rounded">
                 <div class="project-hover">
                     <h2>Carrie's resume</h2>
@@ -78,6 +80,8 @@
                     <a href="../image/resume.docx">download</a>
                 </div>
             </div>
+	    </div>
+		</div>
             <div class="clearfix"></div>
         </div>
         <!-- parallax -->
