--- a/html/Carrie-portfolio-resume.html
+++ b/html/Carrie-portfolio-resume.html
@@ -11,9 +11,9 @@
     <!-- tittle -->
 	<title>Carrie:Resume</title>
     <!-- Carrie portfolio CSS -->
-    <link rel="stylesheet" href="https://carrie99teoh.github.io/css/Carrie-portfolio-resume.css"/>
+    <link rel="stylesheet" href="../css/Carrie-portfolio-resume.css"/>
     <!-- Animate.CSS wowjs-->
-    <link rel="stylesheet" href="https://carrie99teoh.github.io/css/animate.css">
+    <link rel="stylesheet" href="../css/animate.css">
     <!-- font -->
     <link href="https://fonts.googleapis.com/css?family=Baloo|Open+Sans" rel="stylesheet">
     <!-- image hover effect -->
@@ -32,28 +32,28 @@
                 <div class="navbar-collapse justify-content-md-center collapse show" id="navbarsExample08">
                     <ul class="navbar-nav">
                         <li class="index-home all-index nav-item">
-                            <a class="nav-link nav-link-color" href="https://carrie99teoh.github.io/html/Carrie-portfolio-aboutme.html">
+                            <a class="nav-link nav-link-color" href="../html/Carrie-portfolio-aboutme.html">
                                 aboutMe
                             </a>
                         </li>
                         <li class="index-home all-index nav-item">
-                            <a class="nav-link nav-link-color" href="https://carrie99teoh.github.io/html/Carrie-portfolio-artwork.html">
+                            <a class="nav-link nav-link-color" href="../html/Carrie-portfolio-artwork.html">
                                 artwork
                             </a>
                         </a>
                         </li>   
                         <li class="carrie-teoh all-index nav-item">
-                            <a class="nav-link nav-link-color" href="https://carrie99teoh.github.io/html/Carrie-portfolio-homepage.html">
+                            <a class="nav-link nav-link-color" href="../html/Carrie-portfolio-homepage.html">
                                 Carrie Teoh
                             </a>
                         </li>
                         <li class="index-home all-index nav-item">
-                            <a class="nav-link nav-link-color" href="https://carrie99teoh.github.io/html/Carrie-portfolio-contact.html">
+                            <a class="nav-link nav-link-color" href="../html/Carrie-portfolio-contact.html">
                                 contact
                             </a>
                         </li>
                         <li class="index-home all-index nav-item active-page">
-                            <a class="nav-link nav-link-color" href="https://carrie99teoh.github.io/html/Carrie-portfolio-resume.html">
+                            <a class="nav-link nav-link-color" href="../html/Carrie-portfolio-resume.html">
                                 resume
                             </a>
                         </li>
@@ -61,15 +61,13 @@
                 </div>
             </nav> 
         <div class="wave">
-            <img src="https://carrie99teoh.github.io/image/waves.png">
+            <img src="../image/waves.png">
         </div>
         </div>
     </div>
     <div class="up">
         <!-- content -->
-        <div class="container">
-		<div class="row row-1">
-			<div class="col-md-12"
+        <div class="container row-1">
             <div class="project wow animated flipInX rounded">
                 <div class="project-hover">
                     <h2>Carrie's resume</h2>
@@ -80,25 +78,23 @@
                     <a href="../image/resume.docx">download</a>
                 </div>
             </div>
-	    </div>
-		</div>
             <div class="clearfix"></div>
         </div>
         <!-- parallax -->
         <div id="container-parallax" class="container-parallax">
             <div id="scene" class="scene">
-                <div class="img-wheel-resume" data-depth="0.3"><img src="https://carrie99teoh.github.io/image/wheel-body-resume.png"></div>
-                <div class="img-wheel-eye-resume" data-depth="0.4"><img src="https://carrie99teoh.github.io/image/wheel-eye-resume.png"></div>
-                <div class="img-water1-resume" data-depth="0.8"><img src="https://carrie99teoh.github.io/image/water1-resume.png"></div>
-                <div class="img-water1-resume" data-depth="0.6"><img src="https://carrie99teoh.github.io/image/water2-resume.png"></div>
-                <div class="img-water1-resume" data-depth="0.5"><img src="https://carrie99teoh.github.io/image/water3-resume.png"></div>
+                <div class="img-wheel-resume" data-depth="0.3"><img src="../image/wheel-body-resume.png"></div>
+                <div class="img-wheel-eye-resume" data-depth="0.4"><img src="../image/wheel-eye-resume.png"></div>
+                <div class="img-water1-resume" data-depth="0.8"><img src="../image/water1-resume.png"></div>
+                <div class="img-water1-resume" data-depth="0.6"><img src="../image/water2-resume.png"></div>
+                <div class="img-water1-resume" data-depth="0.5"><img src="../image/water3-resume.png"></div>
             </div>
         </div>
         <!-- footer -->
         <footer>
             <div class="under-wheel">
                 <div class="footer-waves">
-                    <img src="https://carrie99teoh.github.io/image/footer-waves.png"> 
+                    <img src="../image/footer-waves.png"> 
                 </div>
             </div>
             <div class="footer">
@@ -115,14 +111,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
     <!-- parallax Scripts -->
-	<script src="https://carrie99teoh.github.io/parallax-master/parallax.js"></script>
+	<script src="../parallax-master/parallax.js"></script>
 	<script>
 	// parallax Pretty simple huh?
 	var scene = document.getElementById('scene');
 	var parallax = new Parallax(scene);
     </script>
     <!-- wow js -->
-    <script src="https://carrie99teoh.github.io/wow-master/dist/wow.min.js"></script>
+    <script src="../wow-master/dist/wow.min.js"></script>
     <script>
         var wow = new WOW({
             boxClass: 'wow',
